# stilla

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: release.yml
.github/workflows/scripts/: build_dmg.sh
.stilla/: claude.1h.sh  codex_business.1h.sh  codex_business.1hn.sh  copilot_enterprise.1h.sh  cursor.1h.sh
src/: main.rs
src/plugin/: instance.rs  manager.rs  mod.rs  plugin_menu.rs  plugin_output.rs
src/plugin/tests/: manager_start.rs  manager_update_all.rs  mod.rs
src/utils/: mod.rs  notify.rs  path.rs  process.rs  time_parse.rs
