[package]
name = "stilla"
version = "0.1.0"
edition = "2024"

[dependencies]
tao = { version = "0.35.3", default-features = false }
tray-icon = { version = "0.24.1", default-features = false }

tokio = { version = "1.52.3", features = ["process", "rt-multi-thread", "io-util", "time", "macros"] }

open = { version = "5.3.5" }
dirs = { version = "6.0.0" }

xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.150", default-features = false, features = ["std"] }

[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = { version = "4.18.0", default-features = false, features = ["dbus"] }

[target.'cfg(target_os = "macos")'.dependencies]
notify-rust = { version = "4.18.0", default-features = false }

[target.'cfg(windows)'.dependencies]
notify-rust = { version = "4.18.0", default-features = false }

[profile.dev]
debug = 1
incremental = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
rpath = false

[profile.release.package."*"]
opt-level = 3
codegen-units = 1

[profile.bench]
inherits = "release"
debug = "line-tables-only"
strip = "none"

[profile.test]
opt-level = 1
incremental = true

[workspace.lints.clippy]
bool_assert_comparison = "allow"
branches_sharing_code = "allow"
checked_conversions = "warn"
collapsible_else_if = "allow"
collapsible_if = "allow"
create_dir = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
doc_markdown = "warn"
empty_enums = "warn"
enum_glob_use = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
fallible_impl_from = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp_const = "warn"
fn_params_excessive_bools = "warn"
from_iter_instead_of_collect = "warn"
if_same_then_else = "allow"
implicit_clone = "warn"
imprecise_flops = "warn"
inconsistent_struct_constructor = "warn"
inefficient_to_string = "warn"
infinite_loop = "warn"
invalid_upcast_comparisons = "warn"
large_digit_groups = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
let_and_return = "allow"
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
mem_forget = "warn"
mutex_integer = "warn"
needless_continue = "allow"
needless_for_each = "warn"
negative_feature_names = "warn"
path_buf_push_overwrite = "warn"
ptr_as_ptr = "warn"
rc_mutex = "warn"
redundant_feature_names = "warn"
ref_option_ref = "warn"
rest_pat_in_fully_bound_structs = "warn"
result_large_err = "allow"
same_functions_in_if_condition = "warn"
self_named_module_files = "warn"
semicolon_if_nothing_returned = "warn"
str_to_string = "warn"
string_add = "warn"
string_add_assign = "warn"
string_lit_as_bytes = "warn"
todo = "warn"
trait_duplication_in_bounds = "warn"
uninlined_format_args = "warn"
verbose_file_reads = "warn"
wildcard_imports = "warn"
zero_sized_map_values = "warn"
